--- a/app/options.html
+++ b/app/options.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+      <meta charset="utf-8">
     <!-- build:css styles/options-vendor.css -->
     <!-- bower:css -->
     <!-- endbower -->
@@ -11,6 +12,13 @@
   </head>
   <body>
     <h1>'Allo, 'Allo!</h1>
+
+        <input type="checkbox" id="imemages"> allow imemages<br/>
+        <input type="checkbox" id="l33t"> allow l33t sp34k<br/>
+        <br/>
+        <button id="save" type="submit" value="save">save</button>
+        <p id="status"></p>
+        <p id="blessed" ></p>
 
     <!-- build:js scripts/options-vendor.js -->
     <!-- bower:js -->
