one does not simply commit to the meme

--- a/app/options.html
+++ b/app/options.html
@@ -11,14 +11,24 @@
     <!-- endbuild -->
   </head>
   <body>
-    <h1>'Allo, 'Allo!</h1>
-
-        <input type="checkbox" id="imemages"> allow imemages<br/>
-        <input type="checkbox" id="l33t"> allow l33t sp34k<br/>
-        <br/>
-        <button id="save" type="submit" value="save">save</button>
-        <p id="status"></p>
-        <p id="blessed" ></p>
+    <h1>One does not simply turn off the meme...</h1>
+    <div class=flex>
+        <div style="width : 50%">
+            <label>
+                <input type="checkbox" id="imemages"> allow imemages<br/>
+                <input type="checkbox" id="com-sans"> allow comic sans <br/>
+                <input type="checkbox" id="nyan"> allow nyan cursor<br/>
+                <input type="checkbox" id="l33t"> allow l33t sp34k<br/>
+                <br/>
+            </label>
+        </div>
+        <div style="width : 50%">
+            <img style="width : 50%"src="images/oneDoesNotSimply.png" alt="one does not simply picture">
+        </div>
+    </div>
+            <button id="save" type="submit" value="save">save</button>
+            <p id="status"></p>
+            <p id="blessed" ></p>
 
     <!-- build:js scripts/options-vendor.js -->
     <!-- bower:js -->
