--- a/face-detection-stuff/face-detection-chrome-extensions/app/options.html
+++ b/face-detection-stuff/face-detection-chrome-extensions/app/options.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+      <meta charset="utf-8">
     <!-- build:css styles/options-vendor.css -->
     <!-- bower:css -->
     <!-- endbower -->
@@ -10,7 +11,24 @@
     <!-- endbuild -->
   </head>
   <body>
-    <h1>'Allo, 'Allo!</h1>
+    <h1>One does not simply turn off the meme...</h1>
+    <div class=flex>
+        <div style="width : 50%">
+            <label>
+                <input type="checkbox" id="imemages"> allow imemages<br/>
+                <input type="checkbox" id="com-sans"> allow comic sans <br/>
+                <input type="checkbox" id="nyan"> allow nyan cursor<br/>
+                <input type="checkbox" id="l33t"> allow l33t sp34k<br/>
+                <br/>
+            </label>
+        </div>
+        <div style="width : 50%">
+            <img style="width : 50%"src="images/oneDoesNotSimply.png" alt="one does not simply picture">
+        </div>
+    </div>
+            <button id="save" type="submit" value="save">save</button>
+            <p id="status"></p>
+            <p id="blessed" ></p>
 
     <!-- build:js scripts/options-vendor.js -->
     <!-- bower:js -->
